k8s/ApricotkaCash/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: apricotkacash-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
    - http:
        paths:
          - path: /api/apricotkacash
            pathType: "Prefix"
            backend:
              service:
                name: apricotkacash-service
                port:
                  number: 80
